[project]
name = "fracturedetect"
version = "1.0"
description = "Fracture and Lung Cancer detection Plugin for orthanc"
readme = "README.md"
dependencies = [
    "highdicom==0.22.0",
    "numpy==1.26.4",
    "pydicom==2.4.4",
    "sahi==0.11.20",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "ultralytics==8.3.82",
]
